演示Java虚拟机栈中堆内存大小的设置和查看